res-48 fix gap between intro section and profile

--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -14,6 +14,8 @@
     }
 
     &__content {
+      padding-bottom: 1.6rem;
+
       @media (min-width: $md-screen-breakpoint) {
         display: grid;
         grid-template-rows: minmax(400px, calc(100vh - 145px)) 145px;
@@ -119,7 +121,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
   }
 }
 
